# books-service/src/main/java/weijuly/enterprise/bookstore/constant/ErrorTypes.java
@@ -1,0 +1,7 @@
+package weijuly.enterprise.bookstore.constant;
+
+public interface ErrorTypes {
+
+    String BAD_REQUEST_TYPE = "https://enterprise-bookstore.com/problems/bad-request";
+    String NOT_FOUND_TYPE = "https://enterprise-bookstore.com/problems/not-found";
+}
